--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  amazon_cognito_identity_dart_2: ^1.0.3
-  http: ^0.13.3
-  path: ^1.8.0
-  recase: ^4.1.0
+  amazon_cognito_identity_dart_2: 3.5.0
+  http: 1.1.0
+  path: 1.8.3
+  recase: 4.1.0
   image_picker: 1.0.4
 
 dev_dependencies:
